--- a/src/css/heroHome.module.css
+++ b/src/css/heroHome.module.css
@@ -13,6 +13,10 @@
   z-index: 0;
 }
 @media screen and (orientation: portrait) {
+  .heroClip {
+    max-width: 100vw;
+    overflow: hidden;
+  }
   .heroHome {
     float: none;
     margin-bottom: 0;
