--- a/src/css/split.module.css
+++ b/src/css/split.module.css
@@ -1,4 +1,7 @@
 .splitWrap {
+  overflow: hidden;
+  margin: -30vw 0;
+  padding: 30vw 0;
   width: 100vw;
 }
 .split {
@@ -110,7 +113,7 @@
   content: "";
   display: block;
   float: right;
-  height: 12em;
+  height: 7.2em;
   shape-outside: polygon(63.88% 0%, 100% 0%, 100% 100%);
-  width: 4em;
+  width: 7.2em;
 }
